# ds-mapaction-ecmwf

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  Untitled.ipynb  docker-compose.yml  pyproject.toml
.github/workflows/: ci-test.yml
docs/: README.md  azure-blob-storage.md  copernicus-cds.md  data-processing.md  ecmwf-mars.md
docs/images/: data-flow-diagram.drawio
notebooks/: bounding-box-chad.ipynb  bounding-box-tool.ipynb  ecmwf_analysis-v2.ipynb  ecmwf_analysis.ipynb  ecmwf_exploration_sandbox.ipynb  ecmwf_pipeline-v2-regrid.ipynb  ecmwf_pipeline.ipynb  ecmwf_sandbox.ipynb
src/: download_ecmwf_cds_global.py  download_era5_cds_global.py  download_mars_seas5_chad.py
src/data_analysis/: ecmwf_data_analysis.py
src/data_processing/: custom_python_package.py  util.py
src/data_retrieval/: __main__.py  azure_blob_utils.py  ecmwf_forecast_global_cds.py  era5_forecast_global_cds.py  mars_seas5_chad.py  util.py
src/data_retrieval/cds/: common.py  ecmwf.py  era5.py  mars.py
src/data_retrieval/static_data/: country_bbox.csv
src/data_retrieval_scripts/: ecmwf_forecast_global_cds.py  era5_forecast_global_cds.py
tests/data_retrieval/cds/: test_common.py  test_ecmwf.py  test_era5.py  test_mars.py
